@@ -1,3 +1,6 @@
+Alastair S - Fri Apr 1 2005
+	textviewer enhancements - long titles truncated, fixed int scrollbar
+
 Alastair S - Tue Mar 29 2005
 	bluecube input fixes. can now be paused with hold.
 
